force-app/main/default/objects/Client_Location__c/Client_Location__c.object-meta.xml
<CustomObject>
    <label>Client Location</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Client Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>