force-app/main/default/objects/Client_Location__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>&quot;Loc: &quot; &amp;text(Loc__c) &amp; BR()  &amp;  Street__c &amp; BR() &amp; City__c &amp; BR() &amp; State__c &amp; &quot; &quot; &amp; Zip_Code__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>