force-app/main/default/objects/Client_Location__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postal Code</label>
    <referenceTo>Zip_Code__c</referenceTo>
    <relationshipLabel>Client Locations</relationshipLabel>
    <relationshipName>Client_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>