force-app/main/default/objects/Client_Location__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Client Locations</relationshipLabel>
    <relationshipName>Client_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>