force-app/main/default/objects/Client_Location__c/fields/SUTA_Quote__c.field-meta.xml
<CustomField>
    <fullName>SUTA_Quote__c</fullName>
    <label>SUTA Quote #</label>
    <referenceTo>SUTA_Quote__c</referenceTo>
    <relationshipLabel>Client Locations</relationshipLabel>
    <relationshipName>Client_Locations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>